--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -233,3 +233,16 @@ body {
         justify-content: center;
     }
 }
+
+.quiz-meta span {
+    display: inline-flex;
+    align-items: center;
+    gap: 5px;
+    margin-right: 15px;
+    color: #666;
+    font-size: 0.9em;
+}
+
+.quiz-meta i {
+    font-size: 1.1em;
+}
