--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -15,6 +15,8 @@ body {
   min-height: 100vh;
   background-image: url('../images/wheat.png');
   background-color: var(--bg-color-primary);
+  margin: 0;
+  padding: 0;
 }
 
 h2 {
@@ -31,9 +33,10 @@ h2 {
   justify-content: space-between;
   align-items: center;
   padding: var(--gutter-small) var(--gutter-medium);
-  margin-bottom: var(--gutter-large);
   background-color: var(--color-light);
   box-shadow: var(--shadow-light);
+  width: 100%;
+  margin: 0;
 }
 
 .logo img {
@@ -64,16 +67,16 @@ h2 {
 }
 
 .container {
-  position: relative;
-  height: 80%;
-  overflow: hidden;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .login-container {
   position: relative;
   width: 100%;
   max-width: 400px;
-  margin: 50px auto;
+  margin-top: 50px;
   padding: var(--gutter-medium);
   background-color: var(--color-light);
   box-shadow: var(--shadow-light);
@@ -138,4 +141,9 @@ footer {
   text-align: center;
   padding: var(--padding-small);
   font-size: var(--text-small);
+}
+
+.banner,
+.notification-banner {
+  display: none;
 }
