--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -73,10 +73,12 @@ h2 {
 }
 
 .login-container {
-  position: relative;
+  position: absolute;
   width: 100%;
   max-width: 400px;
-  margin-top: 50px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: var(--gutter-medium);
   background-color: var(--color-light);
   box-shadow: var(--shadow-light);
